<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidWeatherProject</string>
    <string name="welcome">Hey welcome!</string>
    <string name="enter">Enter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="logo">Yahoo logo</string>
    <string name="title_activity_parse">ParseActivity</string>
    <string name="bgimage">Background Image</string>
    <string name="conditionimage">Weather condition image</string>
    <string name="poweredby">Powered by</string>
    <string name="rightbutton">Right button</string>
    <string name="searchbutton">Search button</string>
    <string name="suggestion">Dress For The Day</string>
    
    <style name="textStyle">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center</item>
        <item name="android:textColor">#ffffff</item>
    </style>

</resources>
