<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parse_layout"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidweatherproject.ParseActivity" >

    <TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerInParent="true"
		android:gravity="center_vertical|center_horizontal"
		android:textColor="#424242"
		android:textSize="22sp"
		android:text="@string/suggestion"
		android:textStyle="bold" />
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" 
        android:contentDescription="@string/bgimage"
        android:layout_centerVertical="true"/>
    
    <ImageButton
		android:id="@+id/leftButton"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_centerHorizontal="true"
		android:layout_alignParentLeft="true"
		android:layout_centerVertical="true"
		android:background="@android:color/transparent"
		android:contentDescription="@string/rightbutton"
		android:src="@drawable/left_arrow" />
   
</RelativeLayout>
