<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="#848484"
tools:context="com.example.whattowear.MainActivity" >

     <ImageButton
     android:id="@+id/search_button"
     android:layout_width="51dp"
     android:layout_height="40dp"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:background="@android:color/transparent"
     android:layout_marginRight="5dp"
     android:layout_marginTop="5dp"
     android:scaleType="fitCenter"
     android:contentDescription="@string/searchbutton"
     android:src="@drawable/search" />
     
     <EditText
     android:id="@+id/cityEntry"
     android:layout_width="fill_parent"
     android:layout_height="38dp"
     android:layout_marginTop="5dp"
     android:layout_marginRight="5dp"
     android:layout_toLeftOf="@+id/search_button"
     android:background="#ffffff"
     android:inputType="text" >
        <requestFocus />
    </EditText>
     
    <TextView
	android:id="@+id/title"
	style="@style/textStyle"
    android:layout_alignParentTop="true"
    android:layout_centerInParent="true"
	android:gravity="center_vertical|center_horizontal"
	android:textSize="22sp"
	android:textStyle="bold" />
    
    <TextView
	android:id="@+id/dateText"
	style="@style/textStyle"
	android:layout_centerInParent="true"
	android:gravity="center_vertical|center_horizontal"
	android:layout_below="@+id/title"
	android:layout_marginTop="-5dp"
	android:textSize="12sp" />
    
    <!-- background image -->
	<ImageView
     android:id="@+id/image"
     style="@style/textStyle"       
     android:layout_centerHorizontal="true" 
     android:contentDescription="@string/bgimage"
     android:layout_centerVertical="true" />

	<ScrollView
	android:id="@+id/scrollView1"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_above="@+id/footer" >

		<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"  >
		    
		    <!-- temperature -->
		    <TextView
			android:id="@+id/tempText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="#ffffff"
			android:textSize="70sp" />
		    
		    <!-- condition icon -->
		    <ImageView
			android:id="@+id/icon"
			android:layout_width="52dp"
			android:layout_height="52dp"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/tempText"
			android:layout_marginRight="10dp"
			android:contentDescription="@string/conditionimage" />
			
		    <!-- weather condition -->
			<TextView
			android:id="@+id/conditionText"
			style="@style/textStyle"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/tempText"
			android:layout_toRightOf="@+id/icon"
			android:textSize="16sp" />
			
			<TextView
			android:id="@+id/humidityText"
			style="@style/textStyle"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/conditionText"
			android:layout_toRightOf="@+id/icon"
			android:textSize="16sp" />
			
			<TextView
			android:id="@+id/windText"
			style="@style/textStyle"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/humidityText"
			android:layout_marginBottom="10dp"
			android:layout_toRightOf="@+id/icon"
			android:paddingBottom="10dp"
			android:textSize="16sp" />
			
		</RelativeLayout>
	</ScrollView>

	<ImageButton
	android:id="@+id/rightButton"
	android:layout_width="50dp"
	android:layout_height="50dp"
	android:layout_centerHorizontal="true"
	android:layout_alignParentRight="true"
	android:layout_centerVertical="true"
	android:background="@android:color/transparent"
	android:contentDescription="@string/rightbutton"
	android:src="@drawable/right_arrow" />

	<RelativeLayout
    android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="right" >

        <TextView
        style="@style/textStyle"
        android:id="@+id/power"
        android:text="@string/poweredby"
        android:layout_marginRight="5dp"
        android:textSize="12sp" />
        
        <ImageView
        android:id="@+id/yahooLogo"
        android:layout_width="60dp"
        android:layout_height="16dp"
        android:layout_toRightOf="@+id/power"
        android:contentDescription="@string/logo"
        android:src="@drawable/yahoo" />
    </RelativeLayout>

</RelativeLayout>
